# AstrumManager

./: .gitignore  .replit  AGENT_START.md  PROJECT_HISTORY.md  main.py  nixpacks.toml  pnpm-lock.yaml  pyproject.toml  replit.md  requirements.txt
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  audit.md  bot-structure.md  change_log.md  dev_rules.md  git-ops.md  menu-button-coupling.md  nick-format.md  project_state.md  smoke-test-errors.md  telegram-bot-webhook.md  userservice-injection.md  workflow.md
bot/: config.py  webhook.py
bot/ai/: __init__.py
bot/config/: __init__.py  settings.py
bot/database/: __init__.py  ai_integration.md  ai_schema.py  db.py  migrations.py
bot/handlers/: __init__.py  admin.py  announce_test.py  audit.py  broadcast.py  cancel.py  common.py  complaints.py  content.py  debug.py  echo.py  group.py  group_nick.py  icons.py  members.py  menu.py  news.py  nick.py  publish.py  rules.py  setrole.py  statistics.py  stats.py  synctitles.py  topics.py
bot/keyboards/: __init__.py  admin_panel.py  announcement.py  audit.py  broadcast.py  complaints.py  content.py  icons.py  main_menu.py  members.py  nav.py  news.py  publish.py  rules.py  statistics.py  stats.py  topics.py
bot/middlewares/: logging.py  nick_gate.py
bot/models/: __init__.py  audit.py  news.py  stats.py  topic.py  (+1 more)
data/: astrum.db  astrum.db-shm  astrum.db-wal
docs/: telethon_setup.md
scripts/: pull.sh  push.sh
tests/: __init__.py  conftest.py  test_ai_schema.py  test_base_provider.py  test_db_ai_integration.py
tools/: generate_telethon_session.py
(+53 files in other folders)
