[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Telegram bot built with aiogram 3"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.7.0",
    "aiohttp==3.9.5",
    "aiosqlite==0.20.0",
    "python-dotenv==1.2.2",
    "pydantic==2.7.4",
    "pydantic-core==2.18.4",
]
